--- a/templates/app.html
+++ b/templates/app.html
@@ -10,7 +10,7 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Alata&display=swap" rel="stylesheet">
 
-    <title>To Do List</title>
+    <title>InfiList</title>
 
     <style>
         body {
